initial push to the repository

--- a/hakunamatata/hakunamatata.csproj
+++ b/hakunamatata/hakunamatata.csproj
@@ -199,7 +199,9 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>59506</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:44393/</IISUrl>
+          <IISUrl>https://localhost:44380/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>https://localhost:44380/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
